--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 <body>
+    <html style="background: khaki;"></html>
     <h1> BAHADIR APAYDIN </h1>
     <img src="./WhatsApp Görsel 2024-08-21 saat 14.13.35_f8c09ffe.jpg" height="400" alt="BAHADIR'ın resmi">
     
