--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <html lang="en">
 
 <head>
+    <style>
+        html{
+            background: khaki;
+        }
+    </style>
     <meta charset="UTF-8">
     <title>BAHADIR'S PAGE</title>
 </head>
