--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         <div class="message">Yapım Aşamasında</div>
         
         <!-- Alt bilgi mesajı -->
-        <div class="sub-message">Coming Soon!</div>
+        <div class="sub-message">BAHADIR APAYDIN <br>
+        bahadirapaydin@icloud.com</div>
     </div>
 </body>
 </html>
