--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             <br>
             <br>
         bahadirapaydin@icloud.com</div>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </div>
 </body>
 </html>
