--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yapım Aşamasında</title>
     <style>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Italianno&family=Shadows+Into+Light&display=swap" rel="stylesheet">
         /* Genel sayfa stilini ayarlıyoruz */
         body, html {
             height: 100%;
