--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yapım Aşamasında</title>
+    <!-- Google Fonts bağlantıları -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Italianno&family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -39,6 +40,7 @@
             letter-spacing: 2px;
             color: #fff;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+            font-family: 'Shadows Into Light', cursive;
         }
 
         /* Gif veya resim stili */
@@ -68,6 +70,7 @@
             margin-top: 10px;
             color: #f0f0f0;
             font-weight: 300;
+            font-family: 'Caveat', cursive;
         }
     </style> 
 </head>
