--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yapım Aşamasında</title>
+    <title>Under Construction</title>
     <!-- Google Fonts bağlantıları -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,10 +77,10 @@
 <body>
     <div class="container">
         <!-- Yapım aşamasında olduğunu belirten gif veya resim -->
-        <img src="./giphy.webp" alt="Yapım Aşamasında">
+        <img src="./giphy.webp" alt="Under Construction">
         
-        <!-- Yapım Aşamasında mesajı -->
-        <div class="message">Yapım Aşamasında</div>
+        <!-- İngilizce yapım aşamasında mesajı -->
+        <div class="message">Under Construction</div>
         <br>
         <br>
         <br>
