--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img src="./giphy.webp" alt="Under Construction">
         
         <!-- İngilizce yapım aşamasında mesajı -->
-        <div class="message">Under Constructıon</div>
+        <div class="message">YAPIM AŞAMASINDA</div>
         <br>
         <br>
         <br>
