--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img src="./giphy.webp" alt="Under Construction">
         
         <!-- İngilizce yapım aşamasında mesajı -->
-        <div class="message">BAAĞZI DEĞİŞİKLİKLER YAPILIYOR</div>
+        <div class="message">Güncelleme Yapıyorum</div>
         <br>
         <br>
         <br>
