--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Construction</title>
+    <title>BAHADIR APAYDIN</title>
     <style>
         /* Genel sayfa stilini ayarlıyoruz */
         body, html {
@@ -36,7 +36,7 @@
             letter-spacing: 2px;
             color: #fff;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
-            font-family: 'Shadows Into Light', cursive;
+            font-family: 'Arial', sans-serif;
         }
 
         /* Gif veya resim stili */
@@ -66,7 +66,7 @@
             margin-top: 10px;
             color: #f0f0f0;
             font-weight: 300;
-            font-family: 'Caveat', cursive;
+            font-family: 'Arial', sans-serif;
         }
     </style> 
 </head>
