--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="form-box">
             <h2>LOGIN</h2>
             <p>Welcome back</p>
+            <h4>(Efendim eğitim amaçlıdır, girmeye çalışmayınız :D )</h4>
             
             <form>
                 <div class="input-group">
