--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="form-box">
             <h2>LOGIN</h2>
             <p>Welcome back</p>
-            <p>(Eğitim amaçlıdır, girmeye çalışmayınız :D )</p>
+            <p>(Efendim eğitim amaçlıdır, girmeye çalışmayınız :D )</p>
             
             <form>
                 <div class="input-group">
