--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="form-box">
             <h2>LOGIN</h2>
             <p>Welcome back</p>
-            <p>( Something Awesome Is In The Works 
-                X = @bahadirapaydin_)</p>
+            <p> Something Awesome Is In The Works</p>
+               <p> X = @bahadirapaydin_</p>
             
             <form>
                 <div class="input-group">
