Update placeholder text in login section
ass

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="form-box">
             <h2>LOGIN</h2>
             <p>Welcome back</p>
-            <p> Something Awesome Is In The Works</p>
+            <p>We're working on something great.</p>
                <p> X = @bahadirapaydin_</p>
             
             <form>
