--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="form-box">
             <h2>LOGIN</h2>
             <p>Welcome back</p>
-            <p>⚒️ We're working on something great. ⚒️</p>
+            <p>We're working on something great. ⚒️</p>
                <p> 𝕏 @bahadirapaydin_ </p>
             
             <form>
